fix navbat toggle that causes shop button to still be clicked. Inset <main> to html body and toggle class no-visibility

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,10 @@ img {
     color: #fff;
   }
 
+  .no-visibility {
+    visibility: hidden;
+  }
+
   .hide {
     display: none;
   }
